# opendata

./: Cargo.toml  README.md
common/: Cargo.toml
common/src/: lib.rs
common/src/coordinator/: mod.rs  subscriber.rs
ingest/rfcs/: 0001-stateless-ingest.md
ingest/src/: collector.rs  config.rs  gc.rs  queue.rs
macros/: AGENTS.md  Cargo.toml
macros/src/: lib.rs
macros/src/test/: storage.rs
open-tsdb/: Cargo.toml  README.md
open-tsdb/src/: delta.rs  main.rs  minitsdb.rs  model.rs  util.rs
open-tsdb/src/promql/: config.rs  metrics.rs  mod.rs  scraper.rs  server.rs
open-tsdb/src/serde/: bucket_list.rs  dictionary.rs  forward_index.rs  inverted_index.rs  key.rs  mod.rs  timeseries.rs
open-tsdb/src/storage/: mod.rs
opendata-common/: Cargo.toml
opendata-common/src/: lib.rs
opendata-common/src/storage/: in_memory.rs  mod.rs  slate.rs
timeseries/: Cargo.toml
timeseries/src/: tsdb.rs
vector/src/: db.rs
